--- a/frontend/src/pages/Home/home.scss
+++ b/frontend/src/pages/Home/home.scss
@@ -1,31 +1,23 @@
 .homePage {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #b07289;
-    padding: 4vw 0;
-    .todoContainer {
-        background-color: white;
-        text-align: center;
-        padding: 30px;
-        border-radius: 15px;
-        width: 90vw;
-        max-width: 700px;
-        display: flex;
-        flex-direction: column;
-        grid-gap: 20px;
-        .title {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            grid-gap: 10px;
+    .container {
+        .addTodo {
+            font-size: 20px;
+            cursor: pointer;
+            background-color:  #b07289bf;
+            color: white;
+            border: none;
+            padding: 5px;
+            border-radius: 10px;
+            width: 100%;
+            &:hover {
+                opacity: .9;
+            }
         }
         .todos {
             display: flex;
             flex-direction: column;
             grid-gap: 10px;
+            width: 100%;
         }
     }
 }
